# framer

./: Cargo.toml  README.md  framer.excalidraw  test.html
examples/: example.rs  font.rs  layout.rs  window.rs
src/: element.rs  error.rs  font.rs  lib.rs  style.rs  util.rs  window.rs
src/layout/: constraint.rs  mod.rs  node.rs  strategy.rs
src/layout/util/: point.rs  rectangle.rs  size.rs
src/reactive/: context.rs  mod.rs  observable.rs
src/render/: frame.rs
src/renderer/: atlas.rs  mod.rs  text.rs
src/renderer/shaders/: font.wgsl
