[package]
name = "framer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "^0.28"
wgpu = "^0.16"
log = "^0.4"
slotmap = "^1.0.6"
#image = "0.24.6"
#bytemuck = { version = "1.13.1", features = ["derive"]}
#harfbuzz = "0.4.0"
#threadpool = "1.8.1"
## TODO: Remove by writing bindings to msdf-atlas-gen (Works for now, but is really slow [200ms])
#texture_packer = "0.25.0"
#mint = "0.5.9"
#ttf-parser = "0.19"
#msdf = { git = "https://github.com/cauvmou/msdf-rs" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"]}